[package]
name = "ros-monitor-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.6"
bitcode = "0.6.3"
futures = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["io-util", "process", "rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
